deployments/rc-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: rc-ingress
  namespace: runtime-chick
spec:
  rules:
  - http:
      paths:
      - path: /server/*
        backend:
          serviceName: server
          servicePort: 3003
      - path: /messageboard-server/*
        backend:
          serviceName: messageboard-server
          servicePort: 2007
